--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,11 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.3.2</version>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>com.github.jackieonway.sms</groupId>
 			<artifactId>sms-spring-boot-starter</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
