--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,11 +24,10 @@ spring:
 
 mybatis:
   type-aliases-package: com.inclination.scaffold.infrastraction.repository.po
-  mapper-locations: ['mybatis/*.xml']
-  
-  
+  mapper-locations: classpath:mapper/*.xml
+
 logging:
-  config: classpath:log4j2-log.xml
+  config: classpath:config/log4j2-dev.xml
   
 pagehelper:
   helper-dialect: mysql
