整合rest-template-starter

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,3 +54,11 @@ apollo:
       enabled: true
     namespaces: application,TEST1.common
 
+rest:
+  http:
+    timeout: 1500
+    read:
+      timeout: 5000
+    connnection:
+      request:
+        timeout: 100
