--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>commons-io</artifactId>
+					<groupId>commons-io</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!--json格式化-->
 		<dependency>
@@ -153,6 +159,12 @@
 			<groupId>com.cdancy</groupId>
 			<artifactId>jenkins-rest</artifactId>
 			<version>0.0.16</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>guava</artifactId>
+					<groupId>com.google.guava</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!--apollo配置中心-->
@@ -179,6 +191,12 @@
 			<groupId>com.github.pagehelper</groupId>
 			<artifactId>pagehelper-spring-boot-starter</artifactId>
 			<version>1.2.10</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>mybatis-spring-boot-starter</artifactId>
+					<groupId>org.mybatis.spring.boot</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!--orm接口-->
 		<dependency>
@@ -232,6 +250,12 @@
 			<groupId>com.netflix.hystrix</groupId>
 			<artifactId>hystrix-javanica</artifactId>
 			<version>1.5.18</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>guava</artifactId>
+					<groupId>com.google.guava</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
         <!--数据库修改变动-->
@@ -246,6 +270,12 @@
 			<groupId>com.inclination</groupId>
 			<artifactId>rest-template-starter</artifactId>
 			<version>1.0-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>modelmapper</artifactId>
+					<groupId>org.modelmapper</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
