实现三系统同时修改密码的功能

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,7 +66,7 @@ rest:
 Scaffold:
   tool:
     project:
-      git-url: http://127.0.0.1:3000/
+      git-url: http://localhost:3000/
       git-admin: root
       git-password: tianjingle
       jenkins-url: http://127.0.0.1:9001/
