--- a/pom.xml
+++ b/pom.xml
@@ -291,6 +291,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.4.1</version>
+		</dependency>
 	</dependencies>
 
 <profiles>
